--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -144,8 +144,8 @@
 
       <section class="principal">
         {% block body %}{% endblock %}
+        <div style="height:90px;"></div>
       </section>
-
     <footer>
       <div class="container">
         <div class="row">
