--- a/app/Resources/FOSUserBundle/views/ChangePassword/change_password.html.twig
+++ b/app/Resources/FOSUserBundle/views/ChangePassword/change_password.html.twig
@@ -1,11 +1,11 @@
 {% extends "base.html.twig" %}
 
-{% block title %} Iniciar Sesion {% endblock %}
+{% block title %} Recuperar contraseña {% endblock %}
 
 {% block body %}
     <div class="row">
         <div class="col s12 m8 offset-m2">
-            {% include "FOSUserBundle:Security:login_content.html.twig" %}
+            {% include "@FOSUser/ChangePassword/change_password_content.html.twig" %}
         </div>
     </div>
 {% endblock body %}
