--- a/app/Resources/FOSUserBundle/views/Registration/register.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register.html.twig
@@ -11,7 +11,12 @@
         <br>
 
         {{ form_start(form, { 'enctype':"multipart/form-data"}) }}
-            {{ form_widget(form) }}
+            {{ form_row(form.email) }}
+            {{ form_row(form.username) }}
+            {{ form_row(form.name) }}
+            {{ form_row(form.lastname) }}
+            {{ form_row(form.roles) }}
+            {{ form_row(form.plainPassword) }}
 
             <div class="text-center">
               <input type="submit" class="btn btn-success btn-md mt-lg-3" value="Crear usuario" />
