--- a/app/Resources/views/user/index.html.twig
+++ b/app/Resources/views/user/index.html.twig
@@ -20,7 +20,7 @@
           <table id="user-table" class="table row-border hover stripe" name="TABLA">
             <thead class="thead-light">
               <tr>
-                <th width="50%">Nombre</th>
+                <th width="50%">Nombre de usuario</th>
                 <th width="35%">Email</th>
                 <th width="15%"></th>
               </tr>
