--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -44,7 +44,7 @@
           <div class="row">
             <div class="navbar w-100 navbar-expand-lg navbar-light bg-light">
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav">
+                <ul class="navbar-nav mr-auto">
                   {% if is_granted('ROLE_ADMIN') %}
                   <li class="nav-item">
                     <a class="nav-link" href="{{path('area_index')}}">Áreas</a>
@@ -94,9 +94,10 @@
                     <a class="nav-link" href="{{ path('users_index') }}">Usuarios</a>
                   </li>
                   {% endif %}
-
+                </ul>
+                <ul class="navbar-nav ml-auto">
                   {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
-                  <li class="nav-item dropdown">
+                  <li class="nav-item dropdown float-right">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{app.user.username}}</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                       <a class="dropdown-item" href="{{ path('users_show', { 'id': app.user.id }) }}">Ver perfil</a>
