los errores que me olvide de hacer el push

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -99,7 +99,7 @@
                   {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
                   <li class="nav-item dropdown float-right">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{app.user.username}}</a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <div class="dropdown-menu-right dropdown-menu" aria-labelledby="navbarDropdown">
                       <a class="dropdown-item" href="{{ path('users_show', { 'id': app.user.id }) }}">Ver perfil</a>
                       <a class="dropdown-item" href="{{ path('fos_user_security_logout') }}">Cerrar sesión</a>
                     </div>
