parametrizacion en paginacion, corregida la leyenda en botones

--- a/app/Resources/views/flora/index.pdf.twig
+++ b/app/Resources/views/flora/index.pdf.twig
@@ -1,5 +1,5 @@
 <pdf>
-  <button id="btPrint" class="btn btn-info mt-lg-3 ml-lg-3" type="button" onclick="imprimirPagina()" name="button">Decargar</button>
+  <button id="btPrint" class="btn btn-info mt-lg-3 ml-lg-3" type="button" onclick="imprimirPagina()" name="button">Descargar</button>
     <dynamic-page>
       <div class="container">
       <h1 class="text-center mb-lg-4">Listado de individuos de flora</h1>
