--- a/app/Resources/views/flora/index.xls.twig
+++ b/app/Resources/views/flora/index.xls.twig
@@ -4,7 +4,7 @@
    <input hidden id="specie" class="form-control" name="specie">
    <input hidden id="subspecie" class="form-control" name="subspecie">
    <input hidden id="format" class="form-control" name="_format">
-   <button id="btPrint" class="btn btn-info mt-lg-3 ml-lg-3" type="submit">Decargar</button>
+   <button id="btPrint" class="btn btn-info mt-lg-3 ml-lg-3" type="submit">Descargar</button>
   </form>
     <dynamic-page>
       <div class="container">
