--- a/app/Resources/views/fauna/index.pdf.twig
+++ b/app/Resources/views/fauna/index.pdf.twig
@@ -1,3 +1,9 @@
+{% extends 'base.html.twig' %}
+
+{% block title %} Listado PDF fauna {% endblock %}
+
+
+{% block body %}
 <pdf>
   <a id="btVolver" class="btn btn-info mt-lg-3 ml-lg-3" href="{{ path('fauna_index') }}">Volver al listado</a>
   <button id="btPrint" class="btn btn-info mt-lg-3 ml-lg-3" type="button" onclick="imprimirPagina()" name="button">Descargar</button>
@@ -27,9 +33,11 @@
       </div>
     </dynamic-page>
 </pdf>
+
+{% endblock %}
+
+{% block javascripts %}
 <script src="{{ asset('scripts/jquery.js') }}"></script>
-<link href="{{ asset('bootstrap/css/style.css') }}" rel="stylesheet">
-<link href="{{ asset('bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
 <script src="{{ asset('scripts/pdfmake/pdfmake.min.js') }}"> </script>
 <script src="{{ asset('scripts/pdfmake/vfs_fonts.js') }}" > </script>
 <script>
@@ -56,3 +64,4 @@ function imprimirPagina() {
 }
 
 </script>
+{% endblock %}
