--- a/app/Resources/views/fauna/index.xls.twig
+++ b/app/Resources/views/fauna/index.xls.twig
@@ -1,3 +1,9 @@
+{% extends 'base.html.twig' %}
+
+{% block title %} Listado XLS fauna {% endblock %}
+
+
+{% block body %}
 <pdf>
   <form id="idForm" action="" method="get">
      <input hidden type="text" id="destination" class="form-control" placeholder="Próximo destino" name="destination">
@@ -34,9 +40,12 @@
     </div>
     </dynamic-page>
 </pdf>
+
+{% endblock %}
+
+{% block javascripts %}
+
 <script src="{{ asset('scripts/jquery.js') }}"></script>
-<link href="{{ asset('bootstrap/css/style.css') }}" rel="stylesheet">
-<link href="{{ asset('bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
 <script>
   $('#destination').val("{{params.destination}}");
   $('#specie').val("{{params.specie}}");
@@ -53,3 +62,5 @@
     $("#idForm").submit();
   });
 </script>
+
+{% endblock %}
