--- a/app/Resources/views/flora/index.xls.twig
+++ b/app/Resources/views/flora/index.xls.twig
@@ -1,3 +1,10 @@
+{% extends 'base.html.twig' %}
+
+{% block title %} Listado XLS flora {% endblock %}
+
+
+{% block body %}
+
 <pdf>
   <form id="idForm" action="" method="get">
     <input hidden="hidden" id="area" class="form-control" name="area" value="">
@@ -32,9 +39,12 @@
       </table>
     </dynamic-page>
   </pdf>
+
+  {% endblock %}
+
+{% block javascripts %}
+
   <script src="{{ asset('scripts/jquery.js') }}"></script>
-  <link href="{{ asset('bootstrap/css/style.css') }}" rel="stylesheet">
-  <link href="{{ asset('bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
   <script>
     $('#specie').val("{{params.specie}}");
     $('#subspecie').val("{{params.subspecie}}");
@@ -50,3 +60,5 @@
       $("#idForm").submit();
     });
   </script>
+
+{% endblock %}
