--- a/app/Resources/views/flspecie/index.html.twig
+++ b/app/Resources/views/flspecie/index.html.twig
@@ -12,8 +12,9 @@
     <div class="row">
       <div class="col-md-10 col-center">
         <h1>Especies de flora</h1>
-        <br>
         <a class="btn btn-info float-right btn-m-r mb-lg-3" href="{{ path('flspecie_new') }}">Nueva especie</a>
+        <br><br>
+        {% include 'flspecie/filter.html.twig' %}
         <table id="flspecie-table" class="table">
           <thead class="thead-light">
             <tr>
@@ -117,6 +118,7 @@
        "ordering": false,
        "info":     false
     });
+    $('#name').val("{{params.name}}");
   });
 
   $('#flspecie-table').on("click", ".button_delete", function() {
@@ -148,5 +150,9 @@
         }
       });
   });
+  
+$('#buttonClear').click(function() {
+  $('#name').val('');
+});
 </script>
 {% endblock %}
