Restricción del peso en el formulario del individuo de fauna

--- a/app/Resources/views/fauna/filter.html.twig
+++ b/app/Resources/views/fauna/filter.html.twig
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-md-6">
         <label>Próximo destino</label>
-        <input type="text" id="destination" class="form-control" placeholder="Ingrese próximo destino" name="destination">
+        <input type="text" id="destination" placeholder="Ingrese próximo destino" name="destination" size="62" style="border-radius: 5px;">
       </div>
       <div class="col-md-6">
         <label>Encargado</label>
