--- a/app/Resources/views/fauna/index.html.twig
+++ b/app/Resources/views/fauna/index.html.twig
@@ -35,7 +35,7 @@
           <td>{{fauna.subspecie.specie.name}}</td>
           <td>{{ fauna.subspecie.name }}</td>
           <td>{{ fauna.name }}</td>
-          <td>{{ fauna.weight }}</td>
+          <td>{{ fauna.weight }} Kg.</td>
           <td>
             <a class="btn btn-info" href="{{ path('fauna_show', { 'id': fauna.id }) }}">
               <i class="fa fa-eye"></i>
