Agregué select2 al filtro en el listado de flora

--- a/app/Resources/views/flora/filter.html.twig
+++ b/app/Resources/views/flora/filter.html.twig
@@ -3,19 +3,19 @@
     <div class="row">
       <div class="col-md-4">
         <label>Área</label>
-        <select id="area" class="form-control" name="area">
+        <select id="area" class="form-control select2" name="area">
           <option value="">Buscar área</option>
         </select>
       </div>
       <div class="col-md-4">
         <label>Especie</label>
-        <select id="specie" class="form-control" name="specie">
+        <select id="specie" class="form-control select2" name="specie">
           <option value="">Buscar especie</option>
         </select>
       </div>
       <div class="col-md-4">
         <label>Subespecie</label>
-        <select id="subspecie" class="form-control" name="subspecie">
+        <select id="subspecie" class="form-control select2" name="subspecie">
           <option value="">Buscar subespecie</option>
         </select>
       </div>
