--- a/app/Resources/views/flora/index.html.twig
+++ b/app/Resources/views/flora/index.html.twig
@@ -99,7 +99,7 @@
 
 {% block javascripts %}
 <script src="{{ asset('scripts/dataTables/datatables.min.js') }}"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
+<script src="{{ asset('scripts/select2/js/select2.min.js') }}"></script>
 <script>
   $(document).ready(function(){
     $('#flora-table').DataTable({
@@ -115,6 +115,7 @@
     $('#subspecie').val("{{params.subspecie}}");
     $('#area').val("{{params.area}}");
     $('#format').val('html');
+    $('.select2').select2()
   });
 
   $('#buttonClear').click(function() {
