--- a/app/Resources/views/fasubspecie/index.html.twig
+++ b/app/Resources/views/fasubspecie/index.html.twig
@@ -29,11 +29,11 @@
                 <td>{{ fASubspecie.name }}</ts>
                 <td>{{ fASubspecie.specie }}</td>
                 <td>
-                  <a class="btn btn-success" href="{{ path('fasubspecie_edit', { 'id': fASubspecie.id }) }}">
+                  <a class="btn btn-success btn-sm" href="{{ path('fasubspecie_edit', { 'id': fASubspecie.id }) }}">
                     <i class="fa fa-pencil"></i>
                   </a>
                   <input class="fasubspecie_id" value="{{fASubspecie.id}}" hidden>
-                  <button type="button" class="button_delete btn btn-danger" data-toggle="modal" data-target="#delete_modal">
+                  <button type="button" class="button_delete btn btn-danger btn-sm" data-toggle="modal" data-target="#delete_modal">
                     <i class="fa fa-trash"></i>
                   </button>
                 </td>
