--- a/app/Resources/views/area/index.html.twig
+++ b/app/Resources/views/area/index.html.twig
@@ -29,11 +29,11 @@
               <td>{{ area.name }}</td>
               <td>{{ area.polygon }}</td>
               <td>
-                <a class="btn btn-success" href="{{ path('area_edit', { 'id': area.id }) }}">
+                <a class="btn btn-success btn-sm" href="{{ path('area_edit', { 'id': area.id }) }}">
                   <i class="fa fa-pencil"></i>
                 </a>
                 <input class="area_id" value="{{area.id}}" hidden>
-                <button type="button" class="button_delete btn btn-danger" data-toggle="modal" data-target="#delete_modal">
+                <button type="button" class="button_delete btn btn-danger btn-sm" data-toggle="modal" data-target="#delete_modal">
                   <i class="fa fa-trash"></i>
                 </button>
               </td>
