--- a/app/Resources/views/attendant/index.html.twig
+++ b/app/Resources/views/attendant/index.html.twig
@@ -32,14 +32,14 @@
               <td>{{ attendant.email }}</td>
               <td>{{ attendant.category }}</td>
               <td>
-                <a class="btn btn-info" href="{{ path('attendant_show', { 'id': attendant.id }) }}">
+                <a class="btn btn-info btn-sm" href="{{ path('attendant_show', { 'id': attendant.id }) }}">
                   <i class="fa fa-eye"></i>
                 </a>
-                <a class="btn btn-success" href="{{ path('attendant_edit', { 'id': attendant.id }) }}">
+                <a class="btn btn-success btn-sm" href="{{ path('attendant_edit', { 'id': attendant.id }) }}">
                   <i class="fa fa-pencil"></i>
                 </a>
                 <input class="attendant_id" value="{{attendant.id}}" hidden>
-                <button type="button" class="button_delete btn btn-danger" data-toggle="modal" data-target="#delete_modal">
+                <button type="button" class="button_delete btn btn-danger btn-sm" data-toggle="modal" data-target="#delete_modal">
                   <i class="fa fa-trash"></i>
                 </button>
               </td>
