--- a/app/Resources/views/category/index.html.twig
+++ b/app/Resources/views/category/index.html.twig
@@ -27,11 +27,11 @@
             <tr>
               <td>{{ category.name }}</td>
               <td>
-                <a class="btn btn-success" href="{{ path('category_edit', { 'id': category.id }) }}">
+                <a class="btn btn-success btn-sm" href="{{ path('category_edit', { 'id': category.id }) }}">
                   <i class="fa fa-pencil"></i>
                 </a>
                 <input class="category_id" value="{{category.id}}" hidden>
-                <button type="button" class="button_delete btn btn-danger" data-toggle="modal" data-target="#delete_modal">
+                <button type="button" class="button_delete btn btn-danger btn-sm" data-toggle="modal" data-target="#delete_modal">
                   <i class="fa fa-trash"></i>
                 </button>
               </td>
