--- a/app/Resources/views/flora/index.html.twig
+++ b/app/Resources/views/flora/index.html.twig
@@ -39,14 +39,14 @@
               <td>{{ flora.area.name }}</td>
               <td>{{ flora.plantationDate}}</td>
               <td>
-                <a class="btn btn-info" href="{{ path('flora_show', { 'id': flora.id }) }}">
+                <a class="btn btn-info btn-sm" href="{{ path('flora_show', { 'id': flora.id }) }}">
                   <i class="fa fa-eye"></i>
                 </a>
-                <a class="btn btn-success" href="{{ path('flora_edit', { 'id': flora.id }) }}">
+                <a class="btn btn-success btn-sm" href="{{ path('flora_edit', { 'id': flora.id }) }}">
                   <i class="fa fa-pencil"></i>
                 </a>
                 <input class="flora_id" value="{{flora.id}}" hidden>
-                <button type="button" class="button_delete btn btn-danger" data-toggle="modal" data-target="#delete_modal">
+                <button type="button" class="button_delete btn btn-danger btn-sm" data-toggle="modal" data-target="#delete_modal">
                   <i class="fa fa-trash"></i>
                 </button>
               </td>
