--- a/app/Resources/views/user/index.html.twig
+++ b/app/Resources/views/user/index.html.twig
@@ -31,14 +31,14 @@
                 <td>{{ user.username }}</td>
                 <td>{{ user.email }}</td>
                 <td>
-                  <a class="btn btn-info" href="{{ path('users_show', { 'id': user.id }) }}">
+                  <a class="btn btn-info btn-sm" href="{{ path('users_show', { 'id': user.id }) }}">
                     <i class="fa fa-eye"></i>
                   </a>
-                  <a class="btn btn-success" href="{{ path('users_edit', { 'id': user.id }) }}">
+                  <a class="btn btn-success btn-sm" href="{{ path('users_edit', { 'id': user.id }) }}">
                     <i class="fa fa-pencil"></i>
                   </a>
                   <input class="attendant_id" value="{{user.id}}" hidden>
-                  <button type="button" class="button_delete btn btn-danger" data-toggle="modal" data-target="#delete_modal">
+                  <button type="button" class="button_delete btn btn-danger btn-sm" data-toggle="modal" data-target="#delete_modal">
                     <i class="fa fa-trash"></i>
                   </button>
                 </td>
