--- a/app/Resources/views/fauna/filter.html.twig
+++ b/app/Resources/views/fauna/filter.html.twig
@@ -1,29 +1,29 @@
 <div class="jumbotron" style="padding-top: 2%; padding-bottom: 1%;">
   <form action="{{ path('fauna_index') }}" method="get">
     <div class="row">
-      <div class="col-md-6">
-        <label>Próximo destino</label>
-        <input type="text" id="destination" placeholder="Ingrese próximo destino" name="destination" size="62" style="border-radius: 5px;">
-      </div>
-      <div class="col-md-6">
-        <label>Encargado</label>
-        <select id="attendants" class="form-control select2" name="attendants">
-          <option value="">Buscar encargado</option>
-        </select>
+      <div class="col-md-12">
+        <label>Próximo destino</label><br>
+        <input type="text" id="destination" placeholder="Ingrese próximo destino" name="destination" class="form-control">
       </div>
     </div>
 
     <div class="row mt-lg-2">
-      <div class="col-md-6">
+      <div class="col-md-4">
         <label>Especie</label>
         <select id="specie" class="form-control select2" name="specie">
           <option value="">Buscar especie</option>
         </select>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-4">
         <label>Subespecie</label>
         <select id="subspecie" class="form-control select2" name="subspecie">
           <option value="">Buscar subespecie</option>
+        </select>
+      </div>
+      <div class="col-md-4">
+        <label>Encargado</label>
+        <select id="attendants" class="form-control select2" name="attendants">
+          <option value="">Buscar encargado</option>
         </select>
       </div>
     </div>
