--- a/app/Resources/FOSUserBundle/views/Resetting/request.html.twig
+++ b/app/Resources/FOSUserBundle/views/Resetting/request.html.twig
@@ -4,8 +4,12 @@
 
 {% block body %}
 <div class="container">
+
   <div class="row">
       <div class="col s12 m8 offset-m2">
+      <h1 class="text-center">Reestablecer contraseña</h1>
+        <br>
+        <br>
         {% include "@FOSUser/Resetting/request_content.html.twig" %}
       </div>
   </div>
