--- a/app/Resources/FOSUserBundle/views/ChangePassword/change_password.html.twig
+++ b/app/Resources/FOSUserBundle/views/ChangePassword/change_password.html.twig
@@ -3,9 +3,11 @@
 {% block title %} Recuperar contraseña {% endblock %}
 
 {% block body %}
+  <div class="container">
     <div class="row">
-        <div class="col s12 m8 offset-m2">
+        <div class="col-md-6 col-center">
             {% include "@FOSUser/ChangePassword/change_password_content.html.twig" %}
         </div>
+      </div>
     </div>
 {% endblock body %}
