--- a/app/Resources/FOSUserBundle/views/Resetting/request_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Resetting/request_content.html.twig
@@ -3,9 +3,9 @@
 <form action="{{ path('fos_user_resetting_send_email') }}" method="POST" class="fos_user_resetting_request">
     <div>
         <label for="username">{{ 'resetting.request.username'|trans }}</label>
-        <input type="text" id="username" name="username" required="required" />
+        <input class='form-control mb-lg-3' type="text" id="username" name="username" required="required" />
     </div>
     <div>
-        <input type="submit" value="{{ 'resetting.request.submit'|trans }}" />
+        <input class="btn btn-success btn-md mt-lg-3" type="submit" value="{{ 'resetting.request.submit'|trans }}" />
     </div>
 </form>
