solucionado estilos en el cambiar contraseña

--- a/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
@@ -22,7 +22,7 @@
           <h1 class="card-panel teal lighten-2 white-head">Iniciar sesión</h1>
           <br>
           <br>
-          <label for="username">Email</label>
+          <label for="username">Nombre de usuario o correo electrónico</label>
           <input class='form-control mb-lg-3' type="text" id="username" name="_username" value="{{ last_username }}" required="required" autocomplete="username" />
           <br>
           <label for="password">{{ 'security.login.password'|trans }}</label>
